# adventofcode_2020

./: Cargo.toml
benches/: bench.rs  my_benchmark.rs
src/: day1.rs  main.rs  util.rs
src/days/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs
