[package]
name = "adventofcode_2020"
version = "0.1.0"
authors = ["Yasin Sönmez <yasin.soenmez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
bit-vec = "0.6"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false